--- a/WebDirectory.web/index.html
+++ b/WebDirectory.web/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebDirectory</title>
+    <title>Annuaire</title>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
     <script defer src="js/app.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-<div class="app-bar">
-    <button id="btn-department">Filter by Department</button>
-    <button id="btn-search">Search by Name</button>
+<div id="app">
+    <!-- AppBar -->
+    <nav>
+        <button id="btn-department">Recherche par département</button>
+        <button id="btn-search">Recherche par nom</button>
+    </nav>
+
+    <!-- Search View -->
+    <div id="search-view" class="view hidden">
+        <input type="text" id="name-search" placeholder="Tapez un nom">
+        <ul id="search-entries-list"></ul>
+    </div>
+
+    <!-- Department View -->
+    <div id="department-view" class="view hidden">
+        <select id="department-select">
+            <option value="">Départements</option>
+        </select>
+        <ul id="entries-list"></ul>
+    </div>
+
+    <!-- Entry Detail View -->
+    <div id="entry-detail" class="view hidden">
+        <h2 id="detail-name"></h2>
+        <p id="detail-department"></p>
+        <p id="detail-email"></p>
+        <div id="detail-image"></div>
+        <button id="btn-back">Back</button>
+    </div>
 </div>
-<div id="department-view">
-    <label for="department-select">Select Department:</label>
-    <select id="department-select">
-        <option value="">All Departments</option>
-    </select>
-</div>
-<div id="search-view" class="hidden">
-    <label for="name-search">Search by Name:</label>
-    <input type="text" id="name-search" placeholder="Enter name">
-</div>
-<ul id="entries-list"></ul>
-<div id="entry-detail" class="hidden">
-    <h2>Entry Detail</h2>
-    <p id="detail-name"></p>
-    <p id="detail-department"></p>
-    <p id="detail-email"></p>
-    <div id="detail-image"></div>
-    <button id="btn-back">Back to List</button>
-</div>
+
+<!-- Templates -->
+<script id="entries-template" type="text/x-handlebars-template">
+    {{#each entries}}
+    <li>
+        <a href="#" data-id="{{@index}}">{{prenom}} {{nom}} - {{departements}}</a>
+    </li>
+    {{/each}}
+</script>
+
+<script id="entry-detail-template" type="text/x-handlebars-template">
+    <h2>{{prenom}} {{nom}}</h2>
+    <p>Departments: {{departements}}</p>
+    <p>Email: <a href="mailto:{{links.email}}" target="_blank">{{links.email}}</a></p>
+    <img src="http://localhost:42064/api/{{links.img}}" alt="{{prenom}} {{nom}}">
+</script>
 </body>
 </html>
